--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-bin/
 *.exe
 *.exe~
 *.dll
@@ -18,6 +17,7 @@ bin/
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+bin/*
 
 # Go workspace file
 go.work
