--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-bin/*
+bin/
+.vscode/
 
 # Go workspace file
 go.work
